Fix overflow scrolling

--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@
     display: inline-block;
     background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,0.6));
     width: 95%;
-    height: 380px;
+    height: 370px;
     color: #fff;
     text-align: center;
     padding: 4px 4px;
@@ -64,7 +64,7 @@
 /*specific formatting of rating divs*/
 #popup_title {
     width: 100%;
-    height: 10%;
+    height: 6%;
     top: 0%;
 }
 
